    - Fixed a bug where players with no town we're not able to use public town spawns.
    - Fixed a bug where plot claim was not taking money from a player.
    - Added new plot types and commands to support.
      '/plot set reset/shop'   - Sets a plot as a Shop plot or resets to a normal plot.
      '/town set shopprice $$' - Set the towns default price on shop plots.
      '/town set shoptax $$'   - Set the town tax rate on shop plots.
                                 (a shop plot is charged an extra tax on top of any plot taxes.)
    - Added /towny map big, which fills the entire chatbox (after pressing t) with the map.
    - Expanded commands:
      '/plot [claim/unclaim/nfs] [circle/rect] [radius]'
      '/plot fs within [circle/rect] [radius]'
      '/plot fs [$] within [circle/rect] [radius]'
    - Commands still accepted
      '/plot claim [radius]'
      '/plot fs'
      '/plot fs [$]'
    - Paintings can no longer be placed in the wilderness if the player doesn't have the correct permissions.
    - All /townyworld commands are now accessable via the console. Append a suffix of the world name to any command other than '?' and 'list'. eg. '/tw toggle fire world_nether'.
    - Added new Tags for Towns and Nations. If these are set they will be used instead of the full names in chat.
      '/town set tag [upto 4 characters]'
      '/nation set tag [upto 4 characters]
    - Fixed nations losing Enemies and Allies during a reload.
    - It is now possible to use '/town spawn' when in boats and minecarts. You will leave the vehicle where it is when you teleport.
v0.75.1:
    - Fixed config reading so it works!
v0.75.3:
    - Fixed deleting foreign language files at startup.
    - Added missing entry from english.yml - msg_err_empty_area_selection: '&cSelected area contains no valid plots.'
    - Fixed error on using '/town claim auto'.
    - Fixed a refactoring error which affected towny top commands.